# firebase-jwt-example

./: .gitignore  LICENSE  README.md  firebase-jwt-example.cabal  stack.yaml
src/: API.hs  Lib.hs  Types.hs
