name:                firebase-jwt-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lachezar/firebase-jwt-example
license:             BSD3
license-file:        LICENSE
author:              Lachezar Yankov
maintainer:          example@example.com
copyright:           2020 Lachezar Yankov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, API, Types
  ghc-options:         -fwarn-unused-imports -Wall -fno-warn-unused-do-bind
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant-auth-server
                     , servant-auth
                     , servant-client
                     , wai
                     , warp
                     , http-client
                     , http-client-tls
                     , http-date
                     , http-types
                     , jose
                     , text
                     , bytestring
                     , containers
                     , transformers
                     , lens
                     , unordered-containers
  default-language:    Haskell2010

executable firebase-jwt-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , firebase-jwt-example
  default-language:    Haskell2010

test-suite firebase-jwt-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , firebase-jwt-example
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lachezar/firebase-jwt-example
